--- a/src/index.css
+++ b/src/index.css
@@ -18,11 +18,9 @@ a {
 	text-decoration: none;
 	color: inherit;
 }
-
-@media screen {
-	a:hover {
-		text-decoration: underline;
-	}
+a:hover {
+	color: #a7170c;
+	text-decoration: underline;
 }
 
 [type=checkbox], [type=radio] {
@@ -37,4 +35,8 @@ button, input, optgroup, select, textarea {
 	font-size: 100%;
 	line-height: 1.15;
 	margin: 0;
+}
+
+audio {
+	width: 100%;
 }
